feat: add swagger, fix api-spec & lib generation
